--- a/exemplo/index.html
+++ b/exemplo/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso Javascript</title>
-    <script src="./aula.js"></script>
+    <script src="index.js"></script>
 </head>
 
 <body>
-    
+
 </body>
 </html>
